--- a/gravitee-apim-console-webui/src/management/api/policy-studio/config/policy-studio-config.component.html
+++ b/gravitee-apim-console-webui/src/management/api/policy-studio/config/policy-studio-config.component.html
@@ -30,7 +30,7 @@
   >
   </gv-schema-form>
 
-  <gio-form-slide-toggle *ngIf="displayJupiterToggle" class="policy-studio-api-config__execution_mode" appearance="fill">
+  <gio-form-slide-toggle *ngIf="displayJupiterToggle" class="policy-studio-api-config__execution_mode">
     <gio-form-label>Enable Jupiter mode</gio-form-label>
     <mat-slide-toggle
       gioFormSlideToggle
