--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/configuration/api-proxy-group-endpoint-configuration.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/configuration/api-proxy-group-endpoint-configuration.component.html
@@ -17,7 +17,7 @@
 -->
 <form [formGroup]="configurationForm">
   <mat-card>
-    <gio-form-slide-toggle appearance="fill" class="card__endpoint-configuration__inherit">
+    <gio-form-slide-toggle class="card__endpoint-configuration__inherit">
       <gio-form-label>Inherit configuration</gio-form-label>
       Inherit endpoint configuration from group.
       <mat-slide-toggle
