--- a/gravitee-apim-console-webui/src/shared/components/gio-users-selector/gio-users-selector.component.html
+++ b/gravitee-apim-console-webui/src/shared/components/gio-users-selector/gio-users-selector.component.html
@@ -24,7 +24,7 @@
 
 <mat-dialog-content>
   <div>
-    <mat-form-field class="gio-users-selector__search-autocomplete" appearance="fill">
+    <mat-form-field class="gio-users-selector__search-autocomplete">
       <mat-icon matPrefix>search</mat-icon>
       <mat-label>Search a user by name or email</mat-label>
 
