--- a/gravitee-apim-console-webui/src/management/api/portal/plans/edit/1-general-step/plan-edit-general-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/edit/1-general-step/plan-edit-general-step.component.html
@@ -16,7 +16,7 @@
 
 -->
 <ng-container *ngIf="generalForm" [formGroup]="generalForm">
-  <mat-form-field class="name-field" appearance="fill">
+  <mat-form-field class="name-field">
     <mat-label>Name</mat-label>
     <input matInput formControlName="name" required />
     <mat-error *ngIf="generalForm.get('name').hasError('required')">Name is required.</mat-error>
@@ -24,12 +24,12 @@
     <mat-hint align="end">{{ generalForm.get('name').value?.length || 0 }}/50</mat-hint>
   </mat-form-field>
 
-  <mat-form-field class="description-field" appearance="fill">
+  <mat-form-field class="description-field">
     <mat-label>Description</mat-label>
     <textarea matInput formControlName="description"></textarea>
   </mat-form-field>
 
-  <mat-form-field class="characteristics-field" appearance="fill">
+  <mat-form-field class="characteristics-field">
     <mat-label>Characteristics</mat-label>
     <gio-form-tags-input formControlName="characteristics" [addOnBlur]="true"></gio-form-tags-input>
   </mat-form-field>
@@ -40,7 +40,7 @@
     This plan is published, if you change the general conditions please remember to notify you API subscribers
   </gio-banner-info>
 
-  <mat-form-field class="generalConditions-field" appearance="fill">
+  <mat-form-field class="generalConditions-field">
     <mat-label>Page of General Conditions</mat-label>
     <mat-select formControlName="generalConditions">
       <ng-container *ngIf="conditionPages$ | async; let conditionPages">
@@ -55,7 +55,7 @@
     <h2>Subscriptions</h2>
     <p *ngIf="mode === 'create'">Only for plan without Keyless (public) authentication type</p>
 
-    <gio-form-slide-toggle appearance="fill" class="validation-field">
+    <gio-form-slide-toggle class="validation-field">
       Auto validate subscription
       <mat-slide-toggle
         gioFormSlideToggle
@@ -65,7 +65,7 @@
       ></mat-slide-toggle>
     </gio-form-slide-toggle>
 
-    <gio-form-slide-toggle appearance="fill" class="commentRequired-field">
+    <gio-form-slide-toggle class="commentRequired-field">
       Consumer must provide a comment when subscribing to the plan
       <mat-slide-toggle
         gioFormSlideToggle
@@ -75,7 +75,7 @@
       ></mat-slide-toggle>
     </gio-form-slide-toggle>
 
-    <mat-form-field class="commentMessage-field" appearance="fill">
+    <mat-form-field class="commentMessage-field">
       <mat-label>Custom message to display to consumer</mat-label>
       <input matInput formControlName="commentMessage" />
       <mat-error *ngIf="generalForm.get('commentMessage').hasError('maxlength')"
@@ -85,7 +85,7 @@
   </ng-container>
   <h2>Deployment</h2>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field>
     <mat-label>Sharding tags</mat-label>
     <mat-select formControlName="shardingTags" aria-label="Sharding tags selection" multiple>
       <mat-option *ngFor="let tag of shardingTags$ | async" [value]="tag.id" [disabled]="tag.disabled"
@@ -96,7 +96,7 @@
 
   <h2>Access-Control</h2>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field>
     <mat-label>Groups excluded</mat-label>
     <mat-select formControlName="excludedGroups" aria-label="Groups excluded selection" multiple>
       <mat-option *ngFor="let group of groups$ | async" [value]="group.id">{{ group.name }}</mat-option>
