--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/general/api-proxy-group-general.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/general/api-proxy-group-general.component.html
@@ -20,7 +20,7 @@
     <!-- Name -->
     <div class="card__group-name">
       <div class="card__group-name__label">Name</div>
-      <mat-form-field class="card__group-name__form-field" appearance="fill">
+      <mat-form-field class="card__group-name__form-field">
         <mat-label>Name</mat-label>
         <input type="text" aria-label="Group name input" matInput formControlName="name" required />
         <mat-error *ngIf="generalForm.get('name').hasError('required')"> Name is required. </mat-error>
@@ -35,7 +35,7 @@
       <p class="card__group-lb__hint">
         You can configure load balancing by creating a logical group of endpoints and specifying a load balancing algorithm for them.
       </p>
-      <mat-form-field class="card__group-lb__form-field" appearance="fill">
+      <mat-form-field class="card__group-lb__form-field">
         <mat-label>Load balancing algorithm</mat-label>
         <mat-select aria-label="Load balancing algorithm" formControlName="loadBalancerType" required>
           <mat-option *ngFor="let lb of loadBalancingValues | keyvalue" [value]="lb.value">{{ lb.value }}</mat-option>
