--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/general/api-proxy-group-endpoint-edit-general.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/general/api-proxy-group-endpoint-edit-general.component.html
@@ -21,7 +21,7 @@
       <!-- Type -->
       <div class="card__group-endpoint__row__type">
         <div class="card__group-endpoint__row__type__label">Type</div>
-        <mat-form-field class="card__group-endpoint__row__type__form-field" appearance="fill">
+        <mat-form-field class="card__group-endpoint__row__type__form-field">
           <mat-label>Type</mat-label>
           <mat-select aria-label="Endpoint type" formControlName="type" required>
             <mat-option *ngFor="let st of supportedTypes" [value]="st">{{ st }}</mat-option>
@@ -32,7 +32,7 @@
       <!-- Name -->
       <div class="card__group-endpoint__row__name">
         <div class="card__group-endpoint__row__name__label">Name</div>
-        <mat-form-field class="card__group-endpoint__row__name__form-field" appearance="fill">
+        <mat-form-field class="card__group-endpoint__row__name__form-field">
           <mat-label>Name</mat-label>
           <input type="text" aria-label="Endpoint name input" matInput formControlName="name" required />
           <mat-error *ngIf="generalForm.get('name').hasError('required')"> Name is required. </mat-error>
@@ -47,7 +47,7 @@
     <!-- Target -->
     <div class="card__group-endpoint__row__target">
       <div class="card__group-endpoint__row__target__label">Target</div>
-      <mat-form-field class="card__group-endpoint__row__target__form-field" appearance="fill">
+      <mat-form-field class="card__group-endpoint__row__target__form-field">
         <mat-label>Target</mat-label>
         <input type="text" aria-label="Endpoint target input" matInput formControlName="target" required />
         <mat-error *ngIf="generalForm.get('target').hasError('required')"> Target is required. </mat-error>
@@ -57,7 +57,7 @@
     <!-- Weight -->
     <div class="card__group-endpoint__row__weight">
       <div class="card__group-endpoint__row__weight__label">Weight</div>
-      <mat-form-field class="card__group-endpoint__row__weight__form-field" appearance="fill">
+      <mat-form-field class="card__group-endpoint__row__weight__form-field">
         <mat-label>Weight</mat-label>
         <input type="number" aria-label="Endpoint weight input" matInput formControlName="weight" required />
         <mat-error *ngIf="generalForm.get('weight').hasError('required')"> Weight is required. </mat-error>
@@ -67,7 +67,7 @@
     <!-- Tenants -->
     <div class="card__group-endpoint__row__tenant">
       <div class="card__group-endpoint__row__tenant__label">Tenants</div>
-      <mat-form-field class="card__group-endpoint__row__tenant__form-field" appearance="fill">
+      <mat-form-field class="card__group-endpoint__row__tenant__form-field">
         <mat-label>Tenants</mat-label>
         <mat-select aria-label="Endpoint tenants" formControlName="tenants" multiple>
           <mat-option *ngFor="let tenant of tenants" [value]="tenant.name">
