--- a/gravitee-apim-console-webui/src/organization/configuration/identity-provider/org-settings-identity-provider-google/org-settings-identity-provider-google.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/identity-provider/org-settings-identity-provider-google/org-settings-identity-provider-google.component.html
@@ -18,13 +18,13 @@
 <mat-card class="identity-provider__card" [formGroup]="configurationFormGroup">
   <h2 gioTableOfContents>Configuration</h2>
 
-  <mat-form-field class="identity-provider__card__form-field" appearance="fill">
+  <mat-form-field class="identity-provider__card__form-field">
     <mat-label>Client Id</mat-label>
     <input matInput name="configurationClientId" formControlName="clientId" required />
     <mat-error *ngIf="configurationFormGroup.get('clientId').hasError('required')">Client Id is required.</mat-error>
   </mat-form-field>
 
-  <mat-form-field class="identity-provider__card__form-field" appearance="fill">
+  <mat-form-field class="identity-provider__card__form-field">
     <mat-label>Client Secret</mat-label>
     <input matInput name="configurationClientSecret" type="password" formControlName="clientSecret" required />
     <mat-error *ngIf="configurationFormGroup.get('clientSecret').hasError('required')">Client Secret is required.</mat-error>
