--- a/gravitee-apim-console-webui/src/organization/configuration/identity-provider/org-settings-identity-provider.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/identity-provider/org-settings-identity-provider.component.html
@@ -60,7 +60,7 @@
     <mat-card class="identity-provider__card">
       <h2 gioTableOfContents>General</h2>
 
-      <mat-form-field class="identity-provider__card__form-field" appearance="fill">
+      <mat-form-field class="identity-provider__card__form-field">
         <mat-label>Name</mat-label>
         <input matInput name="name" minlength="2" maxlength="50" formControlName="name" required />
         <mat-hint>Identity provider name. The name will be used to define the authentication endpoint</mat-hint>
@@ -74,7 +74,7 @@
         >
       </mat-form-field>
 
-      <mat-form-field class="identity-provider__card__form-field" appearance="fill">
+      <mat-form-field class="identity-provider__card__form-field">
         <mat-label>Description</mat-label>
         <input matInput name="description" formControlName="description" />
         <mat-hint>Provide a description of the identity provider</mat-hint>
@@ -82,7 +82,7 @@
 
       <!-- Note: Token exchange endpoint ?? -->
 
-      <gio-form-slide-toggle class="identity-provider__card__form-field" appearance="fill">
+      <gio-form-slide-toggle class="identity-provider__card__form-field">
         <gio-form-label>Allow portal authentication to use this identity provider</gio-form-label>
         <mat-slide-toggle
           gioFormSlideToggle
@@ -92,7 +92,7 @@
         ></mat-slide-toggle>
       </gio-form-slide-toggle>
 
-      <gio-form-slide-toggle class="identity-provider__card__form-field" appearance="fill">
+      <gio-form-slide-toggle class="identity-provider__card__form-field">
         <gio-form-label>A public email is required to be able to authenticate</gio-form-label>
         <mat-slide-toggle
           gioFormSlideToggle
@@ -137,14 +137,14 @@
         class="identity-provider__card__group-mapping"
         [formGroupName]="groupMappingIndex"
       >
-        <mat-form-field class="identity-provider__card__group-mapping__form-field" appearance="fill">
+        <mat-form-field class="identity-provider__card__group-mapping__form-field">
           <mat-label>Condition</mat-label>
           <input #groupMappingConditionInput matInput name="condition" formControlName="condition" required />
           <mat-hint>The condition which should be validated to associate below groups at login time.</mat-hint>
           <mat-error *ngIf="groupMappingControl.get('condition').hasError('required')">Condition is required.</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="identity-provider__card__group-mapping__form-field" appearance="fill">
+        <mat-form-field class="identity-provider__card__group-mapping__form-field">
           <mat-label>Group</mat-label>
           <mat-select formControlName="groups" multiple required>
             <mat-option *ngFor="let group of groups$ | async" [value]="group.id">{{ group.name }}</mat-option>
@@ -173,14 +173,14 @@
         class="identity-provider__card__role-mapping"
         [formGroupName]="roleMappingIndex"
       >
-        <mat-form-field class="identity-provider__card__role-mapping__form-field" appearance="fill">
+        <mat-form-field class="identity-provider__card__role-mapping__form-field">
           <mat-label>Condition</mat-label>
           <input matInput name="condition" formControlName="condition" required />
           <mat-hint>The condition which should be validated to associate below groups at login time.</mat-hint>
           <mat-error *ngIf="roleMappingControl.get('condition').hasError('required')">Condition is required.</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="identity-provider__card__role-mapping__form-field" appearance="fill">
+        <mat-form-field class="identity-provider__card__role-mapping__form-field">
           <mat-label>Organization roles</mat-label>
           <mat-select formControlName="organizations" multiple required>
             <mat-option *ngFor="let role of organizationRoles$ | async" [value]="role.name">{{ role.name }}</mat-option>
@@ -212,7 +212,7 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell id="actions" *matHeaderCellDef>Roles selected</th>
             <td mat-cell *matCellDef="let environment" formGroupName="environments">
-              <mat-form-field appearance="fill">
+              <mat-form-field>
                 <mat-label>Roles</mat-label>
                 <mat-select [formControlName]="environment.id" multiple required>
                   <mat-option *ngFor="let role of environmentRoles$ | async" [value]="role.name">{{ role.name }}</mat-option>
