--- a/gravitee-apim-console-webui/src/organization/configuration/notification-templates/org-settings-notification-template.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/notification-templates/org-settings-notification-template.component.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="org-settings-notification-template__form__card__fields">
-        <gio-form-slide-toggle appearance="fill">
+        <gio-form-slide-toggle>
           <gio-form-label>Override default template</gio-form-label>
           <mat-slide-toggle
             gioFormSlideToggle
@@ -57,7 +57,7 @@
           ></mat-slide-toggle>
         </gio-form-slide-toggle>
 
-        <mat-form-field appearance="fill" *ngIf="!isTemplateToInclude">
+        <mat-form-field *ngIf="!isTemplateToInclude">
           <mat-label>Title of the notification</mat-label>
           <input matInput formControlName="title" required />
           <mat-error *ngIf="notificationTemplatesForm.get(notificationTemplate.type).get('title').hasError('required')"
@@ -65,7 +65,7 @@
           >
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field>
           <mat-label>Content</mat-label>
           <textarea
             matInput
