--- a/gravitee-apim-console-webui/src/organization/configuration/roles/role/org-settings-role.component.html
+++ b/gravitee-apim-console-webui/src/organization/configuration/roles/role/org-settings-role.component.html
@@ -26,19 +26,19 @@
     <gio-banner-info *ngIf="isReadOnly">System role are not editable</gio-banner-info>
 
     <mat-card class="org-settings-role__role-card">
-      <mat-form-field appearance="fill">
+      <mat-form-field>
         <mat-label>Role name</mat-label>
         <input class="org-settings-role__role-card__field__name" matInput formControlName="name" required />
         <mat-hint>The name cannot be changed after it has been created.</mat-hint>
         <mat-error *ngIf="roleForm.get('name').hasError('required')">Name is required.</mat-error>
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field>
         <mat-label>Role description</mat-label>
         <input matInput formControlName="description" />
       </mat-form-field>
 
-      <gio-form-slide-toggle appearance="fill">
+      <gio-form-slide-toggle>
         <gio-form-label>Default role</gio-form-label>
         <mat-slide-toggle gioFormSlideToggle aria-label="Default role toggle" formControlName="default"></mat-slide-toggle>
       </gio-form-slide-toggle>
