--- a/gravitee-apim-console-webui/src/shared/components/gio-table-wrapper/gio-table-wrapper.component.html
+++ b/gravitee-apim-console-webui/src/shared/components/gio-table-wrapper/gio-table-wrapper.component.html
@@ -18,7 +18,7 @@
 
 <div class="gio-table-wrapper__header-bar">
   <div>
-    <mat-form-field *ngIf="!disableSearchInput" class="gio-table-wrapper__header-bar__search-field" appearance="outline">
+    <mat-form-field *ngIf="!disableSearchInput" class="gio-table-wrapper__header-bar__search-field">
       <mat-icon matPrefix>search</mat-icon>
       <mat-label>{{ searchLabel }}</mat-label>
       <input class="search-input" [formControl]="inputSearch" type="search" matInput data-testid="search" />
