feat(console): add ApiCreationStep state to save valid state
Note: invalid state will be completed when we manage the dependency between states

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/api-creation-stepper-menu.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/api-creation-stepper-menu.component.html
@@ -25,7 +25,8 @@
     <stepper-menu-step
       *ngFor="let step of lastStepPerLabelNumber"
       [stepNumber]="step.labelNumber"
-      [currentStep]="currentStep.labelNumber"
+      [step]="step"
+      [activeStep]="currentStep.labelNumber === step.labelNumber"
       >{{ step.label }}</stepper-menu-step
     >
   </div>
